--- a/authentication-service.properties
+++ b/authentication-service.properties
@@ -1,1 +1,8 @@
-
+spring.application.name=authentication-service
+spring.datasource.url=jdbc:mysql://localhost:3306/pgdb
+spring.datasource.username=root
+spring.datasource.password=Deepak@1809
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
