--- a/authentication-service.properties
+++ b/authentication-service.properties
@@ -1,5 +1,5 @@
 spring.application.name=authentication-service
-spring.datasource.url=jdbc:mysql://localhost:3306/pgdb
+spring.datasource.url=jdbc:mysql://localhost:3306/harinidb
 spring.datasource.username=root
 spring.datasource.password=Deepak@1809
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
